[gd_scene load_steps=6 format=3 uid="uid://du2ccxkb4n2ng"]

[ext_resource type="Script" path="res://assets/scripts/character_properties.gd" id="1_yevf2"]
[ext_resource type="Texture2D" uid="uid://bf47n7n0a1pl2" path="res://assets/sprites/effect_bubble.png" id="2_7v6uo"]
[ext_resource type="Texture2D" uid="uid://cu4nj4h1d3x4i" path="res://assets/sprites/goodie.png" id="3_6qfuc"]

[sub_resource type="Animation" id="Animation_jtjb2"]
resource_name = "expand"
length = 0.2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_08d3n"]
_data = {
"expand": SubResource("Animation_jtjb2")
}

[node name="CharacterBaseNode" type="Node2D"]
script = ExtResource("1_yevf2")

[node name="ActionTimer" type="Timer" parent="."]

[node name="EffectCircle" type="Sprite2D" parent="."]
texture = ExtResource("2_7v6uo")

[node name="EffectCircleAnimator" type="AnimationPlayer" parent="EffectCircle"]
libraries = {
"": SubResource("AnimationLibrary_08d3n")
}

[node name="CharacterSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_6qfuc")

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -60.0
offset_right = 30.0
offset_bottom = -55.0
pivot_offset = Vector2(30, 2.5)

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="animation_finished" from="EffectCircle/EffectCircleAnimator" to="." method="_on_effect_circle_animator_animation_finished"]
